--- a/_includes/head_title.html
+++ b/_includes/head_title.html
@@ -2,9 +2,7 @@
     <div class="container--small">
         <div class="mt--120">
             <div class="text-center">
-                <h1 class="heading heading--xxlarge">
-                    {{ page.head_title }}
-                </h1>
+                <h1 class="heading heading--large">{{ page.head_title }}</h1>
             </div>
         </div>
     </div>
