--- a/_includes/head_title_2.html
+++ b/_includes/head_title_2.html
@@ -1,12 +1,14 @@
-<section class="banner banner--scholarship img-volunteer-bg vp--100 black-gradient--top black-gradient--bottom mh--100vh">
+<section
+    class="banner banner--scholarship img-volunteer-bg vp--100 black-gradient--top black-gradient--bottom mh--100vh"
+>
     <div class="container--small">
         <div class="mt--120">
             <div class="text-center">
-                <h1 class="heading heading--xxlarge color--main">
+                <h1 class="heading heading--large color--main">
                     {{ page.head_title }}
                 </h1>
-                <h2 class="heading heading--medium mt--50">
-                    <p>{{ page.head_desc }}<br>{{ page.head_desc_2 }}</p>
+                <h2 class="heading heading--medium mt--10">
+                    <p>{{ page.head_desc }}<br />{{ page.head_desc_2 }}</p>
                 </h2>
             </div>
         </div>
