--- a/_includes/head_title_3.html
+++ b/_includes/head_title_3.html
@@ -1,9 +1,16 @@
-<section class="banner banner--sponsorship background-image  vp--100 t-mh--80vh black-gradient--top black-gradient--bottom mh--100vh lazy" data-bg="url('{{ page.bg_image }}')">
+<section
+    class="banner banner--sponsorship background-image vp--100 t-mh--80vh black-gradient--top black-gradient--bottom mh--100vh lazy"
+    data-bg="url('{{ page.bg_image }}')"
+>
     <div class="container--small">
         <div class="mt--120">
             <div class="text-center">
-                <h1 class="heading heading--xxlarge color--main">{{ page.head_title }}</h1>
-                <h2 class="heading heading--medium mt--50">{{ page.head_subtitle }}</h2>
+                <h1 class="heading heading--large color--main">
+                    {{ page.head_title }}
+                </h1>
+                <h2 class="heading heading--medium mt--10">
+                    {{ page.head_subtitle }}
+                </h2>
             </div>
         </div>
     </div>
