--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,8 @@
         <nav class="nav color--main">
             <ul class="main-links">
                 <li>
-                    <div>
-                        <a href="{{site.baseurl}}/conferences/">All Conferences</a>
+                   <div>
+                     <!--    <a href="{{site.baseurl}}/conferences/">All Conferences</a>
                         <svg aria-hidden="true" data-prefix="fas" data-icon="caret-down"
                             class="svg-inline--fa fa-caret-down fa-w-10" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 320 512">
@@ -36,12 +36,11 @@
                                 ITA</a></li>
                         <li><a href="{{site.baseurl}}/conferences/code-mesh-ldn/">Code Mesh LDN</a></li>
                     </ul>
-                </li>
+                    </li> -->
                 <li><a href="{{site.baseurl}}/past-conferences/">PAST CONFERENCES</a></li>
-                <li><a href="{{site.baseurl}}/media/">MEDIA</a></li>
                 <li><a href="{{site.baseurl}}/opportunity-scheme/">DIVERSITY</a></li>
                 <li><a href="{{site.baseurl}}/sponsorship/">SPONSORSHIP</a></li>
-                <li><a href="{{site.baseurl}}/about-us/">About Us</a></li>
+                <li><a href="{{site.baseurl}}/about-us/">ABOUT US</a></li>
                 </li>
             </ul>
         </nav>
