Revert "attempt at fixing the footer"
This reverts commit 0974cec8dd378477e4f17d846a006f3091ee3440.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -388,7 +388,7 @@
                         >
 
                         |
-                        <a class="terms" href="{{site.baseurl}}/about-us/#Conduct"
+                        <a class="terms" href="{{site.baseurl}}/about-us/#Conduct/"
                             >Code of Conduct</a
                         >
                     </p>
