--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -25,51 +25,75 @@
     }
 }
 
-/* Position everything on the left side */
-.footer .section-container {
-    display: block !important;
-    max-width: 1340px;
-    margin: 0 auto;
-    padding: 20px 30px 10px 30px;
+/* Force everything to the left - stronger overrides */
+.footer {
+    position: relative !important;
 }
 
-/* Logo section */
-.footer .container--small:first-child {
-    width: 100%;
-    margin: 0;
+.footer .section-container {
+    display: block !important;
+    max-width: 1340px !important;
+    margin: 0 auto !important;
+    padding: 20px 30px 10px 30px !important;
+}
+
+/* Reset any grid or flex layouts */
+.footer .container--small {
+    display: block !important;
+    width: 100% !important;
+    margin: 0 !important;
+    grid-column: unset !important;
+    grid-row: unset !important;
 }
 
 .footer .logo {
-    text-align: left;
-    padding-top: 10px;
-    padding-bottom: 5px;
+    text-align: left !important;
+    padding-top: 10px !important;
+    padding-bottom: 5px !important;
 }
 
-/* Contact section - position on the left */
+/* Force contact section to the left */
 .footer .top {
     display: block !important;
     width: 100% !important;
     text-align: left !important;
     padding-top: 0 !important;
     padding-bottom: 10px !important;
+    grid-column: unset !important;
+    grid-row: unset !important;
+    justify-self: unset !important;
+    margin-left: 0 !important;
+    margin-right: auto !important;
+    float: none !important;
+    position: relative !important;
 }
 
 .footer .contact {
     text-align: left !important;
     width: auto !important;
-    display: inline-block !important;
+    display: block !important;
+    float: none !important;
+    position: relative !important;
+    margin-left: 0 !important;
+    margin-right: auto !important;
 }
 
 .footer .contact p,
 .footer .contact .highlight {
     text-align: left !important;
     margin-bottom: 2px !important;
+    float: none !important;
+    display: block !important;
 }
 
-/* Copyright section - also on the left, below contact */
+/* Force copyright section to the left as well */
 .footer .container--small.footer-copy {
+    display: block !important;
     width: 100% !important;
     margin: 0 !important;
+    grid-column: unset !important;
+    grid-row: unset !important;
+    align-self: unset !important;
 }
 
 .footer .bottom {
@@ -88,4 +112,12 @@
     text-align: left !important;
     margin: 0 !important;
     line-height: 1.4 !important;
+}
+
+/* Remove any flexbox or grid properties that might interfere */
+.footer .top .contact,
+.footer .top .menu {
+    padding-right: 0 !important;
+    order: unset !important;
+    flex: unset !important;
 }
