--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -1,91 +1,3 @@
-/* Complete footer override - force everything to the left */
-.footer {
-    background-color: #000 !important;
-    color: #fff !important;
-    font-family:
-        Roboto Mono,
-        monospace !important;
-}
+/* Clean overrides file - keeping only essential styles if any are needed */
 
-.footer .section-container {
-    display: block !important;
-    width: 100% !important;
-    max-width: 1340px !important;
-    margin: 0 auto !important;
-    padding: 20px 30px 10px 30px !important;
-}
-
-.footer .container--small {
-    display: block !important;
-    width: 100% !important;
-    margin: 0 !important;
-    max-width: none !important;
-}
-
-.footer .logo {
-    display: block !important;
-    width: 100% !important;
-    text-align: left !important;
-    padding: 10px 0 5px 0 !important;
-}
-
-/* Override the flex layout completely */
-.footer .top {
-    display: block !important;
-    width: 100% !important;
-    padding: 0 !important;
-    margin: 0 !important;
-    text-align: left !important;
-    flex: none !important;
-    justify-content: flex-start !important;
-    align-items: flex-start !important;
-}
-
-.footer .contact {
-    display: block !important;
-    width: 100% !important;
-    text-align: left !important;
-    margin: 0 !important;
-    padding: 0 !important;
-    order: initial !important;
-    flex: none !important;
-    float: none !important;
-    position: static !important;
-}
-
-.footer .contact p,
-.footer .contact .highlight {
-    text-align: left !important;
-    margin-bottom: 5px !important;
-    width: 100% !important;
-    display: block !important;
-}
-
-.footer .container--small.footer-copy {
-    display: block !important;
-    width: 100% !important;
-    margin: 10px 0 0 0 !important;
-}
-
-.footer .bottom {
-    display: block !important;
-    width: 100% !important;
-    text-align: left !important;
-    padding: 0 !important;
-    margin: 0 !important;
-}
-
-.footer .bottom .container {
-    display: block !important;
-    width: 100% !important;
-    text-align: left !important;
-    margin: 0 !important;
-}
-
-.footer .bottom p.copy {
-    text-align: left !important;
-    margin: 0 !important;
-    line-height: 1.4 !important;
-    width: 100% !important;
-    display: block !important;
-}
+/* Add any future custom overrides here */
