--- a/_includes/video_container.html
+++ b/_includes/video_container.html
@@ -24,7 +24,7 @@
         <div class="col-5 t-col-12 t-mt--00 banner--menu">
           <ul>
             {% assign active_conferences = site.conferences | where: 'past',
-            false %} {% for conference in active_conferences %}
+            false | sort: 'conference_init_date' %}{% for conference in active_conferences %}
             <li>
               <a
                 class="paragraph big mono"
